# FiTree

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pyrightconfig.json
.github/workflows/: docs.yaml  pypi-publish.yaml  test.yaml
analysis/: AML_mutation_rates.ipynb  README.md
analysis/AML/data/: AML_cohort_Morita_2020.json  AML_fitness_comparison.csv  AML_mutation_rates.csv  SCIFIL_fitness.txt  diffusion_fitness.txt  fitclone_fitness.txt  trinucleotide_mutation_rates_Watson_2020.csv
analysis/AML/script/: AML_fitness.ipynb  CloMu_predictions.ipynb  longitudinal_predictions.ipynb  process_trees.ipynb
analysis/simulations/data/: fitness_conditional_normal.csv  fitness_masked_normal.csv  fitness_normal.csv  sc_conditional_normal.csv  sc_masked_normal.csv  sc_normal.csv  simulated_cohort.json  simulation_runtimes.csv
analysis/simulations/script/: benchmarking.R  distribution_validation.R  simulation_demo.ipynb
api/: index.html
demo/AML/: AML_tree_df_Morita_2020.csv  AML_variants_Morita_2020.csv  process_trees.ipynb
demo/simulations/: simulation.ipynb
docs/: api.md  index.md
search/: search_index.json
src/fitree/: __init__.py
src/fitree/_inference/: __init__.py  _backend.py  _initialization.py  _likelihood.py  _prior.py  _utils.py  _wrapper.py
src/fitree/_mtbp/: __init__.py  _conditional.py  _marginal.py  _sampling.py
src/fitree/_plot/: __init__.py  _fmat.py  _tree.py
src/fitree/_simulation/: __init__.py  _fmat.py  _simulate.py  _utils.py
src/fitree/_trees/: __init__.py  _cohort.py  _io.py  _subclone.py  _tumor.py  _wrapper.py
src/fitree/_utils/: _ilp.py  (+2 more)
tests/inference/: test_likelihood.py  test_utils.py  test_wrapper.py
tests/mtbp/: test_marginal.py  test_sampling.py
tests/trees/: test_subclone.py  test_tumor.py
workflows/: AML.smk  AML_analysis.smk  benchmarking.smk
workflows/scripts/: benchmarking_helpers.py  run_fitree_AML.py  run_fitree_benchmark.py
(+5 files in other folders)
